Fix overlap on bottom of reports page, updated index w/styles from report

--- a/End2EndPagesCode/css/landing.css
+++ b/End2EndPagesCode/css/landing.css
@@ -27,7 +27,7 @@
 	clear: left;
 	position: relative;
 	height: 400px; 
-	margin: 0px auto; 
+	margin: 0px auto 50px; 
 	/*padding: 20px;*/ 
 	background-color:#000; 
 	opacity:.8; 
@@ -35,6 +35,7 @@
 	font-family:Arial, Helvetica, sans-serif; 
 	color: #fff; 
 	font-weight: bold;
+	border-radius: 4px 4px 4px 0;
 }
 
 #formwrapper {
